...
              child: Row(
                mainAxisAlignment: MainAxisAlignment.spaceAround,
                children: [
                  _buildNavItem(
                    icon: Icons.local_fire_department,
                    svgPath: 'assets/svgs/star5.svg',
                    label: 'Encounters',
                    index: 0,
                    activeColor: isDark
                        ? AppColors.navEncountersDark
                        : Colors.pink,
                  ),
                  _buildNavItem(
...
