...
                              ),
                            );
                          },
                          child: Column(
                            children: [
                              Text(
                                'Find Your Perfect Match',
                                style: appStyle(
                                  24,
                                  Colors.white,
                                  FontWeight.w700,
                                ).copyWith(letterSpacing: -0.5),
                                textAlign: TextAlign.center,
...
